# blorg

./: .env.template  .envrc  .gitignore  Cargo.toml  Justfile  README.org  flake.nix  rust-toolchain.toml  server.toml
site/: about.org  b.org  foaf.rdf  index.html
site/b/: blogging_with_org_mode.org
site/i/: about.txt
site/l/: htmx-preload-2.1.0.min.js
site/s/: _.css
src/: feed.rs  lib.rs  main.rs  page.rs
